# synergia2

examples/normal_form/: CMakeLists.txt  bad_sbend_map.cc  ok_sbend_map.cc
src/synergia/simulation/tests/: test_prop_actions.py
